# athenas-backend

./: README.md  pyproject.toml
cadastro_pessoa/: apps.py  dto.py  models.py  serializers.py  service.py  tasks.py  views.py
cadastro_pessoa/migrations/: 0001_initial.py
configuracoes/: settings.py  urls.py
